--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -13,7 +13,7 @@
      <p>Shooting Guard: <input type="text" name="sg"></p>
      <p>Small Forward: <input type="text" name="sf"></p>
      <p>Power Foward: <input type="text" name="pf"></p>
-     <p>Center: <input type="text" name="c"></p>
+     <p>Center: <input type="text" name="center"></p>
      <input type="submit" name="submit" value="submit" id="submit" />
    </form>
  </body>
