--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -9,10 +9,10 @@
      <h1>Create a Basketball Team!</h1>
      <p>Team Name: <input type="text" name="name"></p>
      <p>Coach: <input type="text" name="coach"></p>
-     <p>Point Guard: <input type="text" name="pg"></p>
-     <p>Shooting Guard: <input type="text" name="sg"></p>
-     <p>Small Forward: <input type="text" name="sf"></p>
-     <p>Power Foward: <input type="text" name="pf"></p>
+     <p>Point Guard: <input type="text" name="p_g"></p>
+     <p>Shooting Guard: <input type="text" name="s_g"></p>
+     <p>Small Forward: <input type="text" name="s_f"></p>
+     <p>Power Foward: <input type="text" name="p_f"></p>
      <p>Center: <input type="text" name="center"></p>
      <input type="submit" name="submit" value="submit" id="submit" />
    </form>
