--- a/views/team.erb
+++ b/views/team.erb
@@ -12,7 +12,7 @@
    <h2>Small Forward: <%= "#{@sf}" %></h2>
    <h2>Power Forward: <%= "#{@pf}" %></h2>
    <h2>Center: <%= "#{@center}" %></h2>
-   
+   <button type="submit" value="submit!">submit</button>
  </body>
 </html>
 
