--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -14,7 +14,7 @@
      <p>Small Forward: <input type="text" name="sf"></p>
      <p>Power Foward: <input type="text" name="pf"></p>
      <p>Center: <input type="text" name="c"></p>
-     <button> type="submit" name="Submit" value="submit" id="submit" </button>
+     <button type="Submit" value="Submit">Submit</button>
    </form>
  </body>
 </html>
