--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -7,7 +7,8 @@
  <body>
    <form method="POST" action="/team">
      <h1>Create a Basketball Team!</h1>
-     <p>Team Name: <input type="text" name="name"></p>
+     <label for="name">Team Name:</label>
+      <input name="name" type="text" id="name">
      <p>Coach: <input type="text" name="coach"></p>
      <p>Point Guard: <input type="text" name="pg"></p>
      <p>Shooting Guard: <input type="text" name="sg"></p>
